# LCS-334-434-684

./: README.md
Project/Shlok_23309, Divyam_23112, Prashant_23237/src/ugv_uav_control/: package.xml  setup.cfg  setup.py
Project/Shlok_23309, Divyam_23112, Prashant_23237/src/ugv_uav_control/models/turtlebot3_burger_aruco/: model.sdf
Project/Shlok_23309, Divyam_23112, Prashant_23237/src/ugv_uav_control/models/x500_downward_camera/: model.sdf
Project/Shlok_23309, Divyam_23112, Prashant_23237/src/ugv_uav_control/scripts/: plot_experiments.py
Project/Shlok_23309, Divyam_23112, Prashant_23237/src/ugv_uav_control/ugv_uav_control/: belief_mpc_node.py  ekf_node.py  experiment_logger.py  middle_path_follower.py  mpc_node.py  pure_pursuit_node.py  stanley_node.py  uav_ancillary_node.py
Project/Shlok_23309, Divyam_23112, Prashant_23237/src/ugv_uav_control/worlds/: path_following.world
Project/kshitiz_23161-agolika_23027/src/hybrid_controller/: package.xml  setup.cfg  setup.py
Project/kshitiz_23161-agolika_23027/src/hybrid_controller/hybrid_controller/: __init__.py
Project/kshitiz_23161-agolika_23027/src/hybrid_controller/hybrid_controller/controllers/: __init__.py  adaptive_mpc_controller.py  lqr_controller.py  mpc_controller.py  yaw_stabilizer.py
Project/kshitiz_23161-agolika_23027/src/hybrid_controller/hybrid_controller/logging/: __init__.py  simulation_logger.py
Project/kshitiz_23161-agolika_23027/src/hybrid_controller/hybrid_controller/models/: __init__.py  differential_drive.py  linearization.py
Project/kshitiz_23161-agolika_23027/src/hybrid_controller/hybrid_controller/utils/: __init__.py  (+1 more)
(+362 files in other folders)
