<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ugv_uav_control</name>
  <version>0.1.0</version>
  <description>Cooperative Aerial-Ground Guidance System</description>
  <maintainer email="shlokm23@iiserb.ac.in">User</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv-python</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
